--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <a href="https://alura.com.br/" target="_blank">
     <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
+    <div class="form-wrapper">
+        <input type="text" id="filme" name="filme" placeholder="Insira o endereço da imagem">
+        <button onclick="adicionar()">Adicionar Filme</button>
+        <!-- <button onclick="remover()">Remover Filme</button> -->
+    </div>
+    <div id="imagens"></div>
     <script src="script.js"></script>
     <footer>
         <p>&copy; Lincoln Rebouças</p>
